# AstroGeoFit

./: AstroGeoFit_Analysis_MCMC.ipynb  AstroGeoFit_Analysis_Model_Fitting.ipynb  AstroGeoFit_tool.py  LICENSE  README.md  configuration.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: requirements.txt
docs/source/: LICENSE.rst  PREREQUISITES.rst  README.rst  conf.py  download_package.rst  get_to_know.rst  index.rst  installation_and_execution_tutorial.rst
docs/source/_static/: custom.css
docs/source/_templates/: footer.html
docs/source/actualizations_doc/: ACTUALIZATIONS.rst  AGF_V1-0-0.rst  index.rst
docs/source/configuration_file_doc/: CONFIG.rst  configuration_file_examples.rst  data_model_parameters.rst  data_sets_guide.rst  genetic_algorithm_parameters.rst  index.rst  mcmc_parameters.rst  output_config.rst  significance_test.rst  weights_parameters.rst
docs/source/examples_doc/: EXAMPLES.rst  ODP_1260.rst  ODP_1262.rst  ODP_926.rst  index.rst  synthetic_example.rst
docs/source/execution_doc/: TOOL_MODE.rst  execution.rst  index.rst
docs/source/installation_doc/: INSTALLATION_UPDATES.rst  index.rst  updates.rst
docs/source/visualization_doc/: VISUALIZATION.rst  figure_post_significance.rst  figures_post_fitting.rst  figures_post_mcmc.rst  index.rst
examples/ODP_1260/configuration_file/: configuration_ODP_1260.yml
examples/ODP_1260/data/: ODP1260.txt  ggge20293-sup-0011-suppinfo06.txt
examples/ODP_1262/configuration_file/: configuration_ODP_1262.yml
examples/ODP_1262/data/: ODP1262.csv  Table_S1_AgeModel.tab  age_model_paper3_1262_Westerhold2020.txt
examples/ODP_926/configuration_file/: configuration_ODP_926.yml
examples/ODP_926/data/: ODP926.txt
examples/synthetic_data/configuration_file/: configuration_synthetic_data.yml
examples/synthetic_data/data/: age_model_ETP.txt  synthetic_data_ETP.txt
src/astrogeofit/: __init__.py  astrogeofit.py
src/astrogeofit/fitting_routines/: frequency_model.py  metrics.py  misc.py  problems.py  train_and_results.py
src/astrogeofit/main_routines/: data_manager.py  main_fitting.py  main_significance_test.py  mcmc_calcula.py  weight_computation.py
(+23 files in other folders)
